# p2p-scope-rust

./: .gitignore  Cargo.toml  README.md
src/: More about Cursive.md  colors.toml  colors2.toml  cursive_channel_runner.rs  cursive_tui.rs  main.rs  main.rs.old  ui_table_views.rs
