[package]
name = "p2p-scope-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
cursive_table_view="0.14"
clap = { version = "4.1.8", features = ["derive", "unicode"] }

cursive={version = "0.20",default-features = false, features = ["crossterm-backend", "toml", "markdown", "term_size"]}
libp2p = { version = "0.51.1", features = ["full"] }
async-trait = "0.1"
tokio = { version = "1.15", features = ["io-util", "io-std", "macros", "rt", "rt-multi-thread"] }
env_logger = "0.10.0"
#libp2p-mplex = { path = "muxers/mplex" }
#libp2p-noise = { path = "transports/noise" }
#libp2p-tcp = { path = "transports/tcp", features = ["tokio"] }

